testsuite/tests/polykinds/T13393.stderr
T13393.hs:61:3: error: [GHC-39999]
    • Ambiguous type variable ‘t0’ arising from a use of ‘mapM’
      prevents the constraint ‘(Traversable t0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘t0’ should be.
      Potentially matching instances:
        instance Traversable (Either a)
          -- Defined in ‘GHC.Internal.Data.Traversable’
        instance Traversable Identity
          -- Defined in ‘GHC.Internal.Data.Traversable’
        ...plus four others
        ...plus 27 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression:
        mapM putBackLeftOverInputAndReturnOutput undefined
      In the expression:
        do mapM putBackLeftOverInputAndReturnOutput undefined
           undefined
      In an equation for ‘encodeLinearToAac’:
          encodeLinearToAac
            = do mapM putBackLeftOverInputAndReturnOutput undefined
                 undefined
            where
                putBackLeftOverInputAndReturnOutput (MkEncodeResult x)
                  = do leftOvers .= x
                       ....

